# TurnsTile

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  README.txt  TurnsTile.txt  azure-pipelines.yml
extras/: AnimatedTiles.avs  CGApalette.avs  TilesheetGen.avs  TurnsTile_Script.avs  thermal.avs
include/avs/: avisynth-258MT-x86.h  avisynth-260MT-x86.h
include/avx/utils/: AvxException.h  AvxString.h
src/: CLUTer.cpp  CLUTer.h  TurnsTile.cpp  TurnsTile.h  TurnsTile.rc  TurnsTile.rc.in  TurnsTileBmpSource.cpp  TurnsTileBmpSource.h  TurnsTileTestSource.cpp  TurnsTileTestSource.h  interface.cpp  interface.h
test/avsavx/: errors.cpp  main.cpp
test/catch/: catch.hpp
test/ref/avs/: errors-cluter-interlaced-height-mod-y8.txt  errors-cluter-interlaced-height-mod-yuy2.txt  errors-cluter-interlaced-height-mod-yv12.txt  errors-cluter-interlaced-height-mod-yv24.txt  errors-cluter-interlaced-height-mod-yv411.txt  errors-turnstile-hitile-range_clip_greaterthanmax.txt  errors-turnstile-hitile-range_tilesheet_greaterthanmax.txt  errors-turnstile-interlaced-height-mod-rgb32_tilesheet.txt  errors-turnstile-interlaced-height-mod-y8_tilesheet.txt  errors-turnstile-interlaced-height-mod-yv12_clip.txt  errors-turnstile-interlaced-height-mod-yv16_tilesheet.txt  errors-turnstile-interlaced-height-mod-yv24_clip.txt  errors-turnstile-interlaced-height-mod-yv411_clip.txt  errors-turnstile-levels.txt  errors-turnstile-lotile-hitile.txt  errors-turnstile-lotile-range_tilesheet_greaterthanmax.txt  errors-turnstile-mode-range-rgb24_greaterthanmax.txt  errors-turnstile-mode-range-y8_lessthanmin.txt  errors-turnstile-mode-range-yuy2_lessthanmin.txt  errors-turnstile-mode-range-yv16_lessthanmin.txt  errors-turnstile-mode-range-yv411_lessthanmin.txt  errors-turnstile-tile-height-factor_clip.txt  errors-turnstile-tile-height-factor_tilesheet.txt  errors-turnstile-tile-height-maximum_clip.txt  errors-turnstile-tile-height-maximum_tilesheet.txt  errors-turnstile-tile-height-minimum-rgb24_interlaced.txt  errors-turnstile-tile-height-minimum-rgb32_progressive.txt  errors-turnstile-tile-height-minimum-y8_progressive.txt  errors-turnstile-tile-height-minimum-yuy2_interlaced.txt  errors-turnstile-tile-height-minimum-yv12_progressive.txt  errors-turnstile-tile-height-minimum-yv16_progressive.txt  errors-turnstile-tile-height-minimum-yv24_interlaced.txt  errors-turnstile-tile-height-minimum-yv411_interlaced.txt  errors-turnstile-tile-height-mod-rgb24_interlaced.txt  errors-turnstile-tile-height-mod-yv12_interlaced.txt  errors-turnstile-tile-height-mod-yv411_interlaced.txt  errors-turnstile-tile-height-mod_progressive.txt  errors-turnstile-tile-width-factor_clip.txt  errors-turnstile-tile-width-maximum_clip.txt  errors-turnstile-tile-width-minimum-rgb24.txt  (+78 more)
test/ref/avsavx/: errors-cluter-colorspace-mismatch.txt  errors-cluter-interlaced-height-mod-rgb32.txt  errors-cluter-interlaced-height-mod-yv16.txt  errors-turnstile-colorspace-mismatch.txt  errors-turnstile-interlaced-height-mod-rgb24_clip.txt  errors-turnstile-interlaced-height-mod-rgb24_tilesheet.txt  errors-turnstile-interlaced-height-mod-rgb32_clip.txt  errors-turnstile-interlaced-height-mod-y8_clip.txt  errors-turnstile-interlaced-height-mod-yuy2_clip.txt  errors-turnstile-interlaced-height-mod-yuy2_tilesheet.txt  errors-turnstile-interlaced-height-mod-yv12_tilesheet.txt  errors-turnstile-interlaced-height-mod-yv16_clip.txt  errors-turnstile-interlaced-height-mod-yv24_tilesheet.txt  errors-turnstile-interlaced-height-mod-yv411_tilesheet.txt  errors-turnstile-lotile-range_clip_greaterthanmax.txt  errors-turnstile-mode-range-rgb32_greaterthanmax.txt  errors-turnstile-mode-range-y8_lessthanmin.txt  errors-turnstile-mode-range-yv12_lessthanmin.txt  errors-turnstile-mode-range-yv24_greaterthanmax.txt  errors-turnstile-mode-range_lessthanmin.txt  errors-turnstile-tile-height-minimum-rgb24_progressive.txt  errors-turnstile-tile-height-minimum-rgb32_interlaced.txt  errors-turnstile-tile-height-minimum-y8_interlaced.txt  errors-turnstile-tile-height-minimum-yuy2_progressive.txt  errors-turnstile-tile-height-minimum-yv12_interlaced.txt  errors-turnstile-tile-height-minimum-yv16_interlaced.txt  errors-turnstile-tile-height-minimum-yv24_progressive.txt  errors-turnstile-tile-height-minimum-yv411_progressive.txt  errors-turnstile-tile-height-mod-rgb32_interlaced.txt  errors-turnstile-tile-height-mod-y8_interlaced.txt  errors-turnstile-tile-height-mod-yuy2_interlaced.txt  errors-turnstile-tile-height-mod-yv16_interlaced.txt  errors-turnstile-tile-height-mod-yv24_interlaced.txt  errors-turnstile-tile-width-factor_tilesheet.txt  errors-turnstile-tile-width-maximum_tilesheet.txt  errors-turnstile-tile-width-minimum-rgb32.txt  errors-turnstile-tile-width-minimum-yuy2.txt  errors-turnstile-tile-width-minimum-yv12.txt  errors-turnstile-tile-width-minimum-yv411.txt  errors-turnstile-tile-width-mod-yuy2.txt  (+91 more)
test/scripts/avs/: errors-cluter-colorspace-mismatch.avs  errors-cluter-interlaced-height-mod-y8.avs  errors-cluter-interlaced-height-mod-yv12.avs  errors-cluter-interlaced-height-mod-yv16.avs  errors-turnstile-hitile-range_clip_greaterthanmax.avs  errors-turnstile-hitile-range_tilesheet_greaterthanmax.avs  errors-turnstile-interlaced-height-mod-y8_tilesheet.avs  errors-turnstile-interlaced-height-mod-yuy2_clip.avs  errors-turnstile-interlaced-height-mod-yv12_clip.avs  errors-turnstile-interlaced-height-mod-yv12_tilesheet.avs  errors-turnstile-interlaced-height-mod-yv411_tilesheet.avs  errors-turnstile-lotile-hitile.avs  errors-turnstile-lotile-range_clip_greaterthanmax.avs  errors-turnstile-lotile-range_clip_lessthanmin.avs  errors-turnstile-lotile-range_tilesheet_greaterthanmax.avs  errors-turnstile-lotile-range_tilesheet_lessthanmin.avs  errors-turnstile-mode-range-rgb24_greaterthanmax.avs  errors-turnstile-mode-range-rgb24_lessthanmin.avs  errors-turnstile-mode-range-rgb32_lessthanmin.avs  errors-turnstile-mode-range-yuy2_lessthanmin.avs  (+137 more)
test/src/: TurnsTile-test.rc.in  interface.h  util_common.cpp  util_common.h
(+280 files in other folders)
